fixed font and icon sizes on mobile

--- a/src/header.css
+++ b/src/header.css
@@ -37,4 +37,35 @@ header {
     font-family: "roboto";
   }
   
+  @media (max-width: 1070px) {
+    #header-left img {
+      float: left;
+      display: flex;
+      width: 7vh;
+      margin-top: -5px;
+      margin-left: 10px;
+    }
+    
+    #header-right {
+      text-align: right;
+      font-size: 2.75vh;
+      padding: 1.6vh;
+    }
+    
+    #header-right img {
+      float: right;
+      width: 2.75vh;
+      padding-top: 0.5vh;
+      margin-right: 1.3vw;
+    }
+    
+    #header-right a:-webkit-any-link {
+      font-weight: 500;
+      color: rgb(143, 136, 85);
+      text-decoration: none;
+      margin-right: 0.26vw;
+      font-family: "roboto";
+    }
   
+
+  }
